# gameboy-emulator

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  README.md  check_rom.cpp  cpu.cpp  cpu.h  debug.cpp  debug.h  debug_config.h  erslionpgameboy emulation && mkdir build -Force && cd build  main.cpp  memory.cpp  memory.h  output.txt  output2.txt  ppu.cpp  ppu.h  simple_emulator.cpp  test_memory_simple.cpp  test_ppu.cpp  test_ppu_comprehensive.cpp
